--- a/css/screen.scss
+++ b/css/screen.scss
@@ -188,6 +188,11 @@ img {
 */
 
 html {
+  font-size: calc($root-font-size/16*100%);
+  line-height: 1.5;
+  font-family: $font-family-primary;
+  color: $color-text;
+  scroll-behavior: smooth;
 }
 
 /*
@@ -195,6 +200,8 @@ html {
 */
 
 ::selection {
+  background-color: $color-primary-light;
+  color: white;
 }
 
 /*
@@ -204,17 +211,34 @@ html {
 */
 
 h1 {
+  font-size: $ms5;
+  font-weight: 700;
+  line-height: calc($baseline*4);
+  margin-bottom: $space-m;
 }
 
 h2 {
+  font-size: $ms3;
+  font-weight: 700;
+  line-height: calc($baseline*3);
+  margin-bottom: $space-m;
+  
 }
 
 h3 {
+  font-size: $ms-1;
+  font-weight: 700;
+  line-height: calc($baseline*3);
+  margin-bottom: $space-m;
 }
 
 h4,
 h5,
 h6 {
+  font-size: $ms0;
+  font-weight: 700;
+  line-height: calc($baseline*3);
+  margin-bottom: $space-m;
 }
 
 p,
@@ -224,23 +248,42 @@ dl,
 table,
 address,
 figure {
+  margin-bottom: $space-m;
 }
 
 ul,
 ol {
+  padding: 0;
+  list-style-position: inside;
 }
 
 li ul,
 li ol {
+  margin-bottom: 0;
 }
 
 blockquote {
+  font-family: $font-family-secondary;
+  font-style: italic;
+  font-size: $ms3;
+  line-height: calc($baseline*4);
+  margin-bottom: $space-m;
+
+
 }
 
 figcaption {
+  font-size: $ms-1;
+  line-height: calc($baseline*2);
+  margin-top: $space-xs;
+  color:$color-text-lighter;
 }
 
 hr {
+  border:0px;
+  height: 1px;
+  background: $color-border;
+  margin-bottom: $space-m;
 }
 
 a {
