--- a/css/screen.scss
+++ b/css/screen.scss
@@ -287,15 +287,21 @@ hr {
 }
 
 a {
+  color:$color-primary;
+  transition: all 0.1s ease-in-out;
+
 }
 
 a:hover {
+  color:$color-primary-light
 }
 
 a:visited {
+  color: $color-primary
 }
 
 a:active {
+  color: $color-primary-dark
 }
 
 /*---------------------------------------/*
