--- a/css/screen.scss
+++ b/css/screen.scss
@@ -215,6 +215,17 @@ h1 {
   font-weight: 700;
   line-height: calc($baseline*4);
   margin-bottom: $space-m;
+  @include mq(bp1){
+    font-size: $ms9;
+    line-height: calc($baseline * 6);
+
+
+  }
+
+  @include mq(bp2){
+    font-size: $ms11;
+    line-height: calc($baseline*8);
+  }
 }
 
 h2 {
@@ -315,7 +326,25 @@ a:active {
 */
 
 .o-row {
+  padding: $space-m $space-m 0;
+  display: flow-root;
+
+&--dark{
+  background-color: get-color(color-gray, 900);
+  color: white;
+
 }
+
+&--xl{
+  padding: $space-xl  $space-xl $space-m;
+}
+}
+
+.o-row--primary{
+  background-color: $color-primary-light;
+  color:white;
+}
+
 
 /*
     Objects: Container
@@ -324,6 +353,8 @@ a:active {
 */
 
 .o-container {
+  margin: 0 auto;
+  max-width: calc(800 / $root-font-size*1rem);
 }
 
 /*
